@@ -472,7 +472,11 @@ name|merge
 argument_list|(
 literal|"one"
 argument_list|,
+literal|1
+argument_list|,
 literal|"two"
+argument_list|,
+literal|1
 argument_list|,
 literal|"merge"
 argument_list|,
@@ -490,7 +494,11 @@ name|merge
 argument_list|(
 literal|"one"
 argument_list|,
+literal|1
+argument_list|,
 literal|"two"
+argument_list|,
+literal|1
 argument_list|,
 literal|"merge2"
 argument_list|,
@@ -508,7 +516,11 @@ name|merge
 argument_list|(
 literal|"merge"
 argument_list|,
+literal|2
+argument_list|,
 literal|"merge2"
+argument_list|,
+literal|2
 argument_list|,
 literal|"merge3"
 argument_list|,
@@ -608,7 +620,11 @@ name|merge
 argument_list|(
 literal|"one"
 argument_list|,
+literal|1
+argument_list|,
 literal|"two"
+argument_list|,
+literal|1
 argument_list|,
 literal|"merge"
 argument_list|,
@@ -626,7 +642,11 @@ name|merge
 argument_list|(
 literal|"one"
 argument_list|,
+literal|1
+argument_list|,
 literal|"two"
+argument_list|,
+literal|1
 argument_list|,
 literal|"merge2"
 argument_list|,
@@ -644,7 +664,11 @@ name|merge
 argument_list|(
 literal|"merge"
 argument_list|,
+literal|2
+argument_list|,
 literal|"merge2"
+argument_list|,
+literal|2
 argument_list|,
 literal|"merge3"
 argument_list|,
@@ -782,8 +806,14 @@ parameter_list|(
 name|String
 name|seg1
 parameter_list|,
+name|int
+name|docCount1
+parameter_list|,
 name|String
 name|seg2
+parameter_list|,
+name|int
+name|docCount2
 parameter_list|,
 name|String
 name|merged
@@ -818,7 +848,7 @@ name|SegmentInfo
 argument_list|(
 name|seg1
 argument_list|,
-literal|1
+name|docCount1
 argument_list|,
 name|directory
 argument_list|)
@@ -836,7 +866,7 @@ name|SegmentInfo
 argument_list|(
 name|seg2
 argument_list|,
-literal|1
+name|docCount2
 argument_list|,
 name|directory
 argument_list|)
